<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.marcosoft.proyectofinal.Reportar1Activity"
    android:weightSum="1">

    <TextView
        android:id="@+id/txtSubirFoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subir_foto"
        android:gravity="center"
        android:textSize="@dimen/btnSizeText"
        />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:srcCompat="@drawable/bache128x128"
        android:id="@+id/imageView"
        android:layout_weight="0.73"
        android:contentDescription="" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="ExtraText">
        android:orientation="vertical"

        <Button
            android:id="@+id/btnCapturar"
            android:layout_width="80sp"
            android:layout_height="80sp"
            android:textSize="20sp"
            android:background="@android:drawable/ic_menu_camera"
            android:text="@string/tomar"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:foregroundGravity="right"
            android:gravity="bottom|center" />

        <Button
            android:id="@+id/btnGaleria"
            android:layout_width="100sp"
            android:layout_height="80sp"
            android:textSize="20sp"
            android:background="@android:drawable/ic_menu_gallery"
            android:text="@string/cargar"
            android:textAlignment="inherit"
            android:gravity="bottom|center"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

    <Button
        android:id="@+id/btnSiguiente"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btnSizeText"
        android:textSize="@dimen/btnSizeTextSiguiente"
        android:text="@string/action_next"
        android:background="?attr/colorPrimary" />
</LinearLayout>